kube/webserver/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-in-kubernetes-webserver
  labels:
    tier: backend
    layer: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
      layer: webserver
  template:
    metadata:
      labels:
        tier: backend
        layer: webserver
    spec:
      containers:
        - name: webserver
          image: stickeepaul/lik-web_server:v0.0.1
          ports:
            - containerPort: 80
          volumeMounts:
            - name: code
              mountPath: /opt/apps/laravel-in-kubernetes/public
      volumes:
        - name: code
          persistentVolumeClaim:
            claimName: 'laravel-in-kubernetes-pvc'
