kube/webserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-in-kubernetes-webserver
spec:
  ingressClassName: nginx
  rules:
    - host: lik.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-in-kubernetes-webserver
                port:
                  number: 80
